--- a/src/Modulos/CancelamentoPlano/components/Checkbox/styles.css
+++ b/src/Modulos/CancelamentoPlano/components/Checkbox/styles.css
@@ -5,10 +5,12 @@
 .container-check {
   display: flex;
   gap: 5px;
+  cursor: pointer;
 }
 
 .container-check label input[type="checkbox"] {
   display: none;
+  cursor: pointer;
 }
 
 .container-check label .content-check {
@@ -21,6 +23,7 @@
   justify-content: center;
   border-radius: 5px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .container-check label input[type="checkbox"]:checked ~ .content-check div {
@@ -28,12 +31,14 @@
   height: 16px;
   background-color: #00995d;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .label-check {
   color: #333333;
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .error {
