--- a/src/Modulos/CancelamentoPlano/components/ModalConfirmacao/styles.css
+++ b/src/Modulos/CancelamentoPlano/components/ModalConfirmacao/styles.css
@@ -1,4 +1,4 @@
-.modal-container {
+.modal-container-teste {
   background: rgba(0, 0, 0, 0.6);
   width: 100vw;
   height: 100%;
@@ -19,6 +19,8 @@
   display: flex;
   padding: 30px;
   overflow-y: auto;
+  transform: translateY(-600px);
+  animation: animation 0.8s forwards !important;
 }
 .modal-header-responsive {
   border-bottom: 1px solid #7c7c83;
@@ -223,11 +225,9 @@
 }
 
 @media (max-width: 768px) {
-  .modal-content-cancelamento-responsive {
-    display: flex;
-  }
   .modal-content-cancelamento {
     height: 944px;
+    width: 90%;
     padding: 10px;
   }
 
@@ -251,5 +251,12 @@
   }
   .content-doc-cancelamento {
     height: 319px;
+  }
+}
+
+@keyframes animation {
+  to {
+    opacity: initial;
+    transform: initial;
   }
 }
